# data-processing

./: .eslintrc.js  .gitignore  README.md  agent_config.toml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.wufr19/data_processor/: config_handler.py  errors.py
.wufr21/: package-lock.json  package.json
.wufr21/dataviewer-graph/: .gitignore
.wufr21/dataviewer-mvp/: main.py
.wufr21/dataviewer-mvp/dataviewer/: app.py
.wufr21/src/: Slider.js
.wufr22/dataviewer/: models.py
2019/: .gitignore  Makefile  requirements.txt
First Weekend Dash and MatLAB/MATLAB/: FirstDayScript.m
api/: api.py
api/Data/: data.csv  data.json  test.csv
data_processor/: __main__.py
dataviewer/: __init__.py  app.py  can.py  config.py  models.py  views.py
dataviewer/static/: filter.css  upload.js
dataviewer/templates/: base.html  filter.html  home.html  upload.html  upload_result.html
public/: data.json  metadata.json
src/: App.css  App.js  BrakeHeat.css  BrakeHeat.js  EngineSpeed.js  VehicleSpeed.js  api.js  index.css  index.js
src/Components/: AreaChart.js  BarChart.js  ChartWrapper.js  Checkbox.js  ComposedChart.js  DataViewerChart.js  GenericChart.js  LineChart.js  ReactGrid.js  ScatterPlot.js  StrokePicker.js
static_processor/: convert.py  parse.py  process.py  upload.py
test/: main_test.py  upload.py
test/files/: LOG001.csv  LOG0010.csv
wufr19/: schema.sql
wufr19/data_processor/: __init__.py  __main__.py
wufr19/test/: reg_text.py
wufr20/src/: ThrottlePosition.js
wufr21/dataviewer-mvp/: README.md  pyproject.toml
(+118 files in other folders)
